--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
   <h2> cac bai tap demo mon BNBW</h2>
   <ul>
-      <li><a href="d01/index.html"></a></li>
-      <li><a href="d02/d02_home.html"></a></li>
-      <li><a href="d03/d03_home.html"></a></li>
-      <li><a href="d04/d04_home.html"></a></li>
+      <li><a href="d01/index.html"></a>D01</li>
+      <li><a href="d02/d02_home.html"></a>D02</li>
+      <li><a href="d03/d03_home.html"></a>D03</li>
+      <li><a href="d04/d04_home.html"></a>D04</li>
   </ul>
 </body>
 </html>
