--- a/d05/d05_table2.html
+++ b/d05/d05_table2.html
@@ -19,16 +19,13 @@
             padding: 2px 15px;
         }
 
-        tr:last-child{
-            font-weight: bold;
-            height: 5rem;
-            border-top: double medium grey
-        }
 
-        tr:last-child td{
+        tfoot td{
             border-top: double medium grey;
             text-align: right;
+            height: 3rem;
             vertical-align: middle;
+            font-weight: bold;
         }
 
         caption{
@@ -36,6 +33,14 @@
             font-weight: bold;
             color: hotpink;
             padding-bottom: 1rem;
+        }
+
+        tbody tr:hover{
+            background-color:hotpink ;
+        }
+
+        tr:nth-child(even){
+            background-color: lawngreen;
         }
     </style>
 </head>
@@ -48,6 +53,7 @@
     
     <table>
         <caption>Thong tin sinh vien </caption>
+        <thead>
         <tr>
             <th>So TT</th>
             <th>Ho va TEN</th>
@@ -55,41 +61,47 @@
             <th>So dien thoai</th>
             <th>Lop</th>
         </tr>
-        <tr>
-            <td>1</td>
-            <td>Nguyen hoang gia</td>
-            <td>hoanggia@gmail.com</td>
-            <td>222</td>
-            <td rowspan="2">2002</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Lieu QUYNH NHU</td>
-            <td>nhu@gmail.com</td>
-            <td>110</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Giang Nam</td>
-            <td>giangnam@gmail.com</td>
-            <td>911</td>
-            <td rowspan="3 ">2007</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>Le bA dUY</td>
-            <td>baduy@gmail.com</td>
-            <td>144</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>Trong Phuc</td>
-            <td>phuc@gmail.com</td>
-            <td>544</td>
-        </tr>
-        <tr >
-            <td colspan="5"> Tong cong 5 sinh vien</td>
-        </tr>
+        </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Nguyen hoang gia</td>
+                    <td>hoanggia@gmail.com</td>
+                    <td>222</td>
+                    <td rowspan="2">2002</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Lieu QUYNH NHU</td>
+                    <td>nhu@gmail.com</td>
+                    <td>110</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Giang Nam</td>
+                    <td>giangnam@gmail.com</td>
+                    <td>911</td>
+                    <td rowspan="3 ">2007</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Le bA dUY</td>
+                    <td>baduy@gmail.com</td>
+                    <td>144</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Trong Phuc</td>
+                    <td>phuc@gmail.com</td>
+                    <td>544</td>
+                </tr>
+           
+                <tfoot>
+                    <tr >
+                        <td colspan="5"> Tong cong 5 sinh vien</td>
+                    </tr>
+            </tfoot>
+        </tbody>
     </table>
 </body>
 </html>
