--- a/Pretest/pretest1.html
+++ b/Pretest/pretest1.html
@@ -11,7 +11,7 @@
     <div>
         <center><h1>ONLINE SHOPEE</h1></center>
     </div>
-    <hr  width="100%" align="center" />
+    
     <div id="menu">
         <br>
         <ul>
@@ -25,7 +25,7 @@
                 <a href="">SHOPS</a>
             </li>        
             <li>
-                <a href="">REGISTER</a>
+                <a href="register.html">REGISTER</a>
             </li>        
             <li>
                 <a href="">SIGN-IN</a>
