--- a/Pretest 4/home.html
+++ b/Pretest 4/home.html
@@ -50,7 +50,9 @@
     </div>
         
     <footer>
-        <center><b>© 2020 - ABC COMPANY</b></center>
+        <p style="text-align: center; text-decoration: double; text-shadow: 2mm black;" style="margin-top: 0rem;">
+            Copyright &copy by ABC Team - April, 2020
+        </p>
     </footer>
 </body>
 </html>
