--- a/Pretest 4/register.html
+++ b/Pretest 4/register.html
@@ -136,7 +136,7 @@
                     "Comment: " + form.comment.value + "\n" + 
                     "Sign me up for email updates: " + form.update.value + "\n"
                 );
-                return false;
+                return true;
 
         </script>
    
