--- a/Pretest/pretest1.html
+++ b/Pretest/pretest1.html
@@ -25,7 +25,7 @@
                 <a href="">SHOPS</a>
             </li>        
             <li>
-                <a href="register.html">REGISTER</a>
+                <a href="register1.html">REGISTER</a>
             </li>        
             <li>
                 <a href="">SIGN-IN</a>
