update export register 3

--- a/Pretest 3/home3.html
+++ b/Pretest 3/home3.html
@@ -31,7 +31,7 @@
                 <a href="">E-LIBRARY</a>
             </li>
             <li>
-                <a href="">SIGN UP</a>
+                <a href="register3.html">SIGN UP</a>
             </li>
             <li>
                 <a href="">SIGN IN</a>
